# pappap-ai-chain

./: .env  Cargo.toml  build.rs
evolution/: ghost_cell_orchestrator.rs
genetics/: system_dna.proto
persona/: mod.rs
persona/membrane/: signal_sanitizer.rs
persona/symbiosis/: feedback_loop.rs  render_params.rs
src/: constants.rs  ethics.rs  main.rs
src/ai/: cache.rs  mod.rs  snn.rs  snn_core.rs  tools.rs  trainer.rs
src/api/: routes.rs
src/core/: block.rs  chain.rs  governance.rs  mod.rs  storage.rs  transaction.rs  wallet.rs
src/evolution/: ghost_cell_orchestrator.rs  mod.rs
src/network/: mod.rs  p2p.rs  webnode.rs
src/persona/: mod.rs
src/persona/membrane/: mod.rs
src/persona/symbiosis/: feedback_loop.rs  mod.rs  render_params.rs
tools/: artifact_forger.rs
