[package]
name = "pappap-ai-chain"
version = "7.7.7"
edition = "2021"

[dependencies]
# --- Core Runtime ---
tokio = { version = "1.32", features = ["full"] }
actix-web = "4.4"
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"

# --- Serialization & Data ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"

# --- Cryptography ---
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
bip39 = "2.0"

# --- P2P Network (MỚI) ---
# Sử dụng phiên bản libp2p mới nhất tương thích với code của bạn
libp2p = { version = "0.52", features = ["tcp", "dns", "websocket", "noise", "yamux", "gossipsub", "identify", "macros", "tokio"] }

# --- AI & Hardware ---
sysinfo = "0.29"

# --- Holy Membrane ---
wasmtime = "14.0"
prost = "0.12"

[build-dependencies]
prost-build = "0.12"
