[package]
name = "pappap-ai-chain"
version = "0.8.0"
edition = "2021"

[dependencies]
# --- Core Runtime ---
tokio = { version = "1.32", features = ["full"] }
actix-web = "4.4"
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"

# --- Cryptography ---
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
bip39 = "2.0"

# --- Networking ---
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "identify", "macros", "tokio"] }

# --- Storage ---
sled = "0.34"

# --- AI & Math (Determinism) ---
fixed = { version = "1.27", features = ["serde"] }
rayon = "1.10"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json", "blocking"] }

# --- Protocol Buffers (Genetics) ---
prost = "0.12"
protoc = "2.28.0"

[build-dependencies]
prost-build = "0.12"
